<resources>
    <string name="app_name">Quizz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz">Quizzz</string>
    <string name="enjoy">Enjoy Brain power</string>
    <string name="home">Home</string>
    <string name="play_again">Play again</string>
    <string name="congratulations">Congratulations</string>
    <string name="lose">You lose !</string>
    <string name="score">your score is</string>
    <string name="last_time">Last quiz time</string>
    <string name="last_result">Last quiz result</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="time">Time</string>
</resources>