<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.ResultFragment">

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/congratulations_text_margin"
        android:fontFamily="@font/karla_bold"
        android:text="@string/congratulations"
        android:textColor="@color/white"
        android:textSize="@dimen/congratulations_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla_medium"
        android:text="@string/score"
        android:textColor="@color/white"
        android:textSize="@dimen/score_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_congratulations" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/score_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score"
        tools:text="your time is" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medal_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time"
        app:srcCompat="@drawable/ic_medal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_replay"
        android:layout_width="0dp"
        android:layout_height="@dimen/replay_button_height"
        android:layout_margin="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:background="@drawable/bg_button_gradient"
        android:elevation="1dp"
        android:text="@string/play_again"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/replay_text_size"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/tv_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/home_text_margin_bottom"
        android:fontFamily="@font/karla_bold"
        android:text="@string/home"
        android:textColor="@color/color_blue"
        android:textSize="@dimen/home_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>